js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-typeof-import.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
typeof
import
;
}
